--- a/ms152u5/mobile.cfg
+++ b/ms152u5/mobile.cfg
@@ -25,8 +25,8 @@
 #　各変数の行頭の「#」を外さないと有効になりません．
 
 # ホームページのURL(デフォルト="")
-#set $home=http://www.kiteya.net/script/msearch/
-set $home=https://www.marbacka.net/msearch/
+#set $home=https://s-arakawa-art.github.io/testweb/
+set $home=https://s-arakawa-art.github.io/testweb/
 
 
 # マッチキーワードのハイライトをするか(デフォルト=1)
